--- a/src/Components/styles/PlatformGamesData.css
+++ b/src/Components/styles/PlatformGamesData.css
@@ -1,16 +1,14 @@
 .div-pop-parent {
   position: fixed;
-  top: 0px;
-  height: 100%;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
   background-color: #000000c9;
   z-index: 100;
   display: flex;
   justify-content: center;
   align-items: center;
-  left: 0px;
-  width: 100%;
-  right: 0px;
 }
 
 .div-image-icon {
@@ -25,14 +23,13 @@
 
 .div-screenshot-img {
   width: 45px;
-  border-radius: 100%;
+  height: 45px;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 45px;
   cursor: pointer;
   transition: background-color 0.5s;
-  background-color: transparent;
 }
 
 .div-screenshot-img:hover {
@@ -49,9 +46,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 100%;
+  border-radius: 50%;
   transition: background-color 0.5s ease-in-out;
-  background-color: transparent;
   cursor: pointer;
 }
 
@@ -67,7 +63,7 @@
 
 .div-pop-close {
   position: absolute;
-  top: 0px;
+  top: 0;
   width: 100%;
   height: 100%;
   background-color: transparent;
@@ -76,16 +72,16 @@
 .div-motion-screenshot-popup {
   z-index: 100;
   position: fixed;
-  top: 0px;
+  top: 0;
 }
 
 .div-list {
   width: 45px;
   height: 45px;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 100%;
   background-color: transparent;
   transition: background-color 0.5s ease-in-out;
   cursor: pointer;
