--- a/src/Components/styles/PlatformGamesData.css
+++ b/src/Components/styles/PlatformGamesData.css
@@ -1,14 +1,16 @@
 .div-pop-parent {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
+  top: 0px;
   height: 100%;
+  width: 100%;
   background-color: #000000c9;
   z-index: 100;
   display: flex;
   justify-content: center;
   align-items: center;
+  left: 0px;
+  width: 100%;
+  right: 0px;
 }
 
 .div-image-icon {
@@ -23,13 +25,14 @@
 
 .div-screenshot-img {
   width: 45px;
-  height: 45px;
-  border-radius: 50%;
+  border-radius: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 45px;
   cursor: pointer;
   transition: background-color 0.5s;
+  background-color: transparent;
 }
 
 .div-screenshot-img:hover {
@@ -46,8 +49,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 50%;
+  border-radius: 100%;
   transition: background-color 0.5s ease-in-out;
+  background-color: transparent;
   cursor: pointer;
 }
 
@@ -63,7 +67,7 @@
 
 .div-pop-close {
   position: absolute;
-  top: 0;
+  top: 0px;
   width: 100%;
   height: 100%;
   background-color: transparent;
@@ -72,16 +76,16 @@
 .div-motion-screenshot-popup {
   z-index: 100;
   position: fixed;
-  top: 0;
+  top: 0px;
 }
 
 .div-list {
   width: 45px;
   height: 45px;
-  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 100%;
   background-color: transparent;
   transition: background-color 0.5s ease-in-out;
   cursor: pointer;
